[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/0x72_16x16DungeonTileset.v1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AnimationPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.08527, 7.10978 )

[sub_resource type="CircleShape2D" id=2]
radius = 83.063

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 8.5 )

[sub_resource type="Animation" id=20]
resource_name = "Die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 2.3, 0.12, 0.12, 1 ), Color( 1, 1, 1, 1 ), Color( 0.270588, 0.270588, 0.270588, 1 ), Color( 0.270588, 0.270588, 0.270588, 1 ), Color( 0.270588, 0.270588, 0.270588, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "EnemyHurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1.7411, 1 ),
"update": 0,
"values": [ Color( 2.3, 0.12, 0.12, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.604396, 1 )
colors = PoolColorArray( 1, 1, 1, 0.67451, 1, 1, 1, 0.45098, 1, 1, 1, 0.0745098 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.386364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 0.4
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 10, 0, 0 )
gravity = Vector3( 0, -30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 7 )

[sub_resource type="CanvasItemMaterial" id=19]

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 0.839216, 0.12549, 0.12549, 1, 0.952941, 0.101961, 0.258824, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.743182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
lifetime_randomness = 0.8
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
scale = 8.0
scale_random = 0.8
scale_curve = SubResource( 17 )
color_ramp = SubResource( 15 )
hue_variation = 1.0
hue_variation_random = 0.03

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 3, 65, 10, 15 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 2.38419e-07, -0.5 )
shape = SubResource( 3 )

[node name="EnemyMove" parent="." instance=ExtResource( 3 )]

[node name="EnemyHurt" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 20 )
anims/EnemyHurt = SubResource( 9 )
anims/RESET = SubResource( 21 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.505882, 0.32549, 0.411765, 0.533333 )
position = Vector2( -3, 5 )
z_index = -1
amount = 25
lifetime = 0.5
preprocess = 0.2
randomness = 0.6
local_coords = false
process_material = SubResource( 13 )

[node name="Particles2D2" type="Particles2D" parent="."]
modulate = Color( 0.505882, 0.32549, 0.411765, 0.533333 )
position = Vector2( 3, 5 )
z_index = -1
amount = 25
lifetime = 0.5
preprocess = 0.2
randomness = 0.6
local_coords = false
process_material = SubResource( 13 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1.17094 )
scale = Vector2( 1, 1.11709 )

[node name="Node" type="Node" parent="."]

[node name="DeathParticles" type="Particles2D" parent="Node"]
material = SubResource( 19 )
z_index = -1
emitting = false
amount = 30
lifetime = 2.0
one_shot = true
explosiveness = 0.7
process_material = SubResource( 18 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_player_hit_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_player_hit_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
